# text-classifier

./: classifier.ipynb  pyproject.toml
